Actions
Bug #11440
closedtar: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
tar.c: In function 'convtoreg': tar.c:2703:28: error: comparison between pointer and integer [-Werror] (dblock.dbuf.typeflag != NULL) && (dblock.dbuf.typeflag != '1') && ^~ tar.c: In function 'doxtract': tar.c:3216:15: error: comparison between pointer and integer [-Werror] if (*linkp != NULL) { ^~ tar.c:3257:15: error: comparison between pointer and integer [-Werror] if (*linkp != NULL) { ^~ tar.c:3306:15: error: comparison between pointer and integer [-Werror] if (*linkp != NULL) { ^~ tar.c:3446:28: error: comparison between pointer and integer [-Werror] dblock.dbuf.typeflag == NULL || convflag) { ^~ tar.c:3449:15: error: comparison between pointer and integer [-Werror] if (*linkp != NULL) { ^~ tar.c:3655:28: error: comparison between pointer and integer [-Werror] dblock.dbuf.typeflag == NULL || ^~ tar.c: In function 'add_file_to_table': tar.c:5529:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] name[strlen(name) - 1] = NULL; ^ tar.c: In function 'is_in_table': tar.c:5567:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] name[strlen(name) - 1] = NULL; ^ tar.c:5586:8: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *ptr = NULL; ^ tar.c: In function 'delete_target': tar.c:6664:15: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast] buf[n] = (char)NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1580259811fb1670012fc9fad4be9624c2b60dae
commit 1580259811fb1670012fc9fad4be9624c2b60dae Author: Toomas Soome <tsoome@me.com> Date: 2019-07-30T20:10:37.000Z 11440 tar: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions